--- a/Fernando.stylesheet.css
+++ b/Fernando.stylesheet.css
@@ -1,7 +1,7 @@
 body {
-	background-color: whitesmoke;
+	background-color: #607D8B;
 	font-family: Impact;
-	color: darkslateblue;
+	color: #FF5722;
 }
 a {
 	color: deeppink;
